--- a/launcher/src/main/resources/com/skcraft/launcher/launcher.properties
+++ b/launcher/src/main/resources/com/skcraft/launcher/launcher.properties
@@ -1,15 +1,13 @@
 #
-# SK's Minecraft Launcher
-# Copyright (C) 2010-2014 Albert Pham <http://www.sk89q.com> and contributors
+# ULD's Minecraft Launcher
+# Copyright (C) 2019-2020 Unleveled Network Team <http://unleveledgaming.net> and contributors
 # Please see LICENSE.txt for license information.
 #
 
-# Leave the version as ${project.version} to pull it from the build.gradle,
-# or replace it with a version string if you wish.
 version=${project.version}
 
 # These can be left as-is or changed to your liking
-launcherShortname=SKCLauncher
+launcherShortname=ULDLauncher
 offlinePlayerName=Player
 
 # Only change these if you know what you're doing.
@@ -20,7 +18,6 @@ yggdrasilAuthUrl=https://authserver.mojang.com/authenticate
 microsoftClientId=d18bb4d8-a27f-4451-a87f-fe6de4436813
 resetPasswordUrl=https://minecraft.net/resetpassword
 
-# You MUST change these from the defaults. These URLs are provides as examples only.
-newsUrl=http://update.skcraft.com/template/news.html?version=%s
-packageListUrl=http://update.skcraft.com/template/packages.json?key=%s
-selfUpdateUrl=http://update.skcraft.com/template/launcher/latest.json
+newsUrl=http://unleveledgaming.org/newlaunchers/public/news.html
+packageListUrl=http://unleveledgaming.org/newlaunchers/public/packages.php?key=%s
+selfUpdateUrl=http://unleveledgaming.org/newlaunchers/public/launcher/latest.json
