--- a/launcher-bootstrap/src/main/resources/com/skcraft/launcher/bootstrap.properties
+++ b/launcher-bootstrap/src/main/resources/com/skcraft/launcher/bootstrap.properties
@@ -7,4 +7,4 @@
 homeFolderWindows=ULD Public Launcher
 homeFolder=.ULD Public Launcher
 launcherClass=com.skcraft.launcher.FancyLauncher
-latestUrl=http://unleveledgaming.org/newlaunchers/public/launcher/latest.json
+latestUrl=https://unleveledgaming.org/newlaunchers/public/launcher/latest.json
