--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ subprojects {
     apply plugin: 'java'
 
     group = 'com.skcraft'
-    version = '5.2-SNAPSHOT'
+    version = '6.0'
 
     java {
         toolchain {
